installed react and react-dom

--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "homepage": "https://github.com/the-mainak-banerjee/zwigato-food#readme",
   "devDependencies": {
     "parcel": "^2.8.3"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
